ufw (0.23) intrepid; urgency=low

  * show protocol when no ports are specified in status (LP: #263308)

 -- Jamie Strandboge <jamie@ubuntu.com>  Tue, 09 Sep 2008 17:52:53 -0500

ufw (0.22) intrepid; urgency=low

  * fix confusing output of 'app update' command (LP: #261932)
  * only reload during 'app update' if the profile name is used in
    the current ruleset (LP: #261323)
  * don't reload user rules if not enabled and don't toggle ENABLED=yes if
    failure in starting the firewall (LP: #262451)
  * don't traceback if /proc not mounted (LP: #268084)

 -- Jamie Strandboge <jamie@ubuntu.com>  Wed, 27 Aug 2008 11:51:14 -0500

ufw (0.21) intrepid; urgency=low

  * add confirmation on enable when running under ssh (LP: #253840)
  * don't reload the firewall on 'app update' when running under ssh
  * update ufw.pot
  * fix some pygettext errors
  * warn if profile name is found in /etc/services
  * don't delete application rules when the action doesn't match
    (LP: #260881)
  * add reload command
  * added debian/triggers and update debian/postinst for use with dpkg
    triggers (thanks Colin Watson for the suggestion)
  * add 'app update all' command
  * update man page for reload and 'app update all'

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 18 Aug 2008 20:22:32 -0400

ufw (0.20) intrepid; urgency=low

  * add 'verbose' option to status command
  * implement application (package) integration
  * update run_tests.sh to honor subclass
  * debian/control: Depends on iptables >= 1.4.0 for ipv6 comment support

 -- Jamie Strandboge <jamie@ubuntu.com>  Thu, 07 Aug 2008 12:04:05 -0400

ufw (0.19) intrepid; urgency=low

  * don't modify the chains when --dry-run is specified (LP: #247352)
  * add dotted netmask support
  * don't have util.py import common.py
  * normalize rules so what is added to chains and what is displayed to the
    user is consistent (LP: #237446)
  * documentation updates (LP: #247177)
  * implement port ranges (LP: #231103)