@@ -1,6 +1,7 @@
 ufw (0.23) intrepid; urgency=low
 
   * show protocol when no ports are specified in status (LP: #263308)
+  * update after*.rules when setting default policy (LP: #273278)
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Tue, 09 Sep 2008 17:52:53 -0500
 
